se agrego ejercicio4 semana2

--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -103,3 +103,14 @@ line-height: 42px;
 
 color: #FFFFFF;
 }
+
+.portfolio{
+
+    position: absolute;
+width: 960px;
+height: 424px;
+left: 0px;
+top: 1373px;
+
+
+}
